--- a/quem-somos.html
+++ b/quem-somos.html
@@ -30,7 +30,7 @@
                     <li>Tablets em todas as salas de aula</li>
                     <li>Professores qualificados</li>
                     <li>Universidade bem avaliada</li>
-                    <li>Excelnte localização</li>
+                    <li>Excelente localização</li>
                 </ol>
                 <hr>
                 <h2>Objetivos</h2>
